# sandcrate

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  setup_postgresql.sh  tailwind.config.js  test_websocket.py  test_websocket_simple.js
sandcrate-backend/: Cargo.toml  env.example
sandcrate-backend/migrations/: 20240101000001_create_initial_schema.sql
sandcrate-backend/scripts/: init_db.rs  setup_db.sh
sandcrate-backend/src/: api.rs  auth.rs  database.rs  lib.rs  main.rs  plugin.rs  services.rs  websocket.rs
sandcrate-cli/: Cargo.toml
sandcrate-cli/src/: main.rs
sandcrate-plugin/: Cargo.toml
sandcrate-plugin/src/: lib.rs
sandcrate-react/: package-lock.json  package.json  vite.config.ts
sandcrate-react/src/: App.tsx  index.css
sandcrate-react/src/components/: ErrorBoundary.tsx  LoadingSpinner.tsx  RealtimePluginExecutor.tsx  Sidebar.tsx
sandcrate-react/src/contexts/: AuthContext.tsx
sandcrate-react/src/pages/: Auth.tsx  Dashboard.tsx  Plugins.tsx
sandcrate-web/: Cargo.toml  Trunk.toml  index.html  main.js
sandcrate-web/src/: auth.rs  dashboard.rs  lib.rs  login.rs  main.rs  main.rs 
src/: App.tsx  app.rs  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Sidebar.tsx
src/pages/: Auth.tsx
