[package]
name = "sandcrate-backend"
edition = "2021"
default-run = "sandcrate-backend"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasmtime = "15"
wasmtime-wasi = "15"
pam = "0.7"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio-tungstenite = "0.21"
futures-util = { version = "0.3", features = ["sink"] }
uuid = { version = "1.0", features = ["v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
dotenv = "0.15"
async-trait = "0.1"